--- a/public/chat.html
+++ b/public/chat.html
@@ -82,6 +82,7 @@
         />
         <button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
         <button id="record-btn" class="btn"><i class="fas fa-microphone"></i> Record Audio</button>
+        <input type="file" id="image-input" class="btn" accept="image/*">
       </form>
       <audio id="audio-player" controls style="display: none;"></audio>
     </div>
